	Fixed bug where Safari 7 on Mac OS X would delete contents if you pressed Cmd+C since it passes out a charCode for the event.
	Fixed bug where bound drop events inside inline editors would get fired on all editor instances instead of the specific instance.
	Fixed bug where images outlined selection border would be clipped when the autoresize plugin was enabled.
	Fixed so you don't need to set language option to false when specifying a custom language_url.
	Fixed so the link dialog "text to display" field gets automatically hidden if the selection isn't text contents. Patch contributed by Godefroy.
	Fixed so the none option for the target field in the link dialog gets excluded when specifiying the target_list config option.
	Fixed so outline styles are displayed by default in the formats preview. Patch contributed by nhammadi.
	Fixed so the max characters for width/height is more than 3 in the media and image dialogs.
	Fixed so the old mceSpellCheck command toggles the spellchecker on/off.
	Fixed so the setupeditor event is fired before the setup callback setting to ease up compatibility with 3.x.
	Fixed so auto url link creation in IE 9+ is disabled by default and re-enabled by the autolink plugin.
	Removed the custom scrollbars for WebKit since the default browser scrollbars looks a lot better now days.
Version 4.0.12 (2013-12-18)
	Added new media_scripts option to the media plugin. This makes it possible to embed videos using script elements.
	Fixed bug where WebKit/Blink would produce random span elements and styles when deleting contents inside the editor.
	Fixed bug where WebKit/Blink would produce span elements out of link elements when they where removed by the unlink command.
	Fixed bug where div block formats in inline mode where applied to all paragraphs within the editor.
	Fixed bug where div blocks where marked as an active format in inline mode when doing non collapsed selections.